--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <main>
     <section id="links">
-      <a href="#">Länk till sidan på webben</a>
-      <a href="#">Länk till Github repo</a>
+      <a href="http://webshare.mah.se/ap1930" target="_blank">Länk till sidan på webben</a>
+      <a href="https://github.com/philles85/Inl-mningsuppgift-DDU2" target="_blank">Länk till Github repo</a>
     </section>
     <section>
       <h1>Närmaste och längst bort i Centraleuropa</h1>
